<resources>
    <string name="app_name">RetoTiendaVirtual</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="nav_header_title">Reto Tienda Virtual</string>
    <string name="nav_header_subtitle">version 1.0</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="nosotros">Nosotros</string>
    <string name="carrito_de_compras">Carrito de Compras</string>
    <string name="productos">Productos</string>
    <string name="servicios">Servicios</string>
    <string name="sucursales">Sucursales</string>
    <string name="agregar_producto">Agregar Producto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>
    <string name="ingrese_su_correo">Ingrese su correo</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="repita_su_contrase_a">Repita su contraseña</string>
    <string name="ingrese_su_numero_de_telefono">Ingrese su numero de telefono</string>
    <string name="ingrese_su_fecha_de_nacimiento">Ingrese su fecha de nacimiento</string>
    <string name="registrar_su_cuenta">Registrar su cuenta</string>
    <string name="ingrese_el_nombre_del_producto">Ingrese el nombre del producto</string>
    <string name="ingrese_la_descripcion_del_producto">Ingrese la descripcion del producto</string>
    <string name="ingrese_el_precio_del_producto">Ingrese el precio del producto</string>
    <string name="agregar_un_producto">Agregar un Producto</string>
</resources>